--- a/catalog/tovar.html
+++ b/catalog/tovar.html
@@ -125,7 +125,7 @@
       <ol class="breadcrumb justify-content-center">
         <li class="breadcrumb-item"><a href="#">Главная</a></li>
         <li class="breadcrumb-item"><a href="#">Прайс и акции</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Data</li>
+        <li class="breadcrumb-item active" aria-current="page">Гликолевый пилинг</li>
       </ol>
     </nav>
   </main>
